# dynamic-graphql

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  release.toml
derive/: Cargo.toml  release.toml
derive/src/: lib.rs  utils.rs
derive/src/args/: app.rs  common.rs  expand_object.rs  expand_object_fields.rs  gql_enum.rs  input_object.rs  interface.rs  mod.rs  mutation.rs  mutation_fields.rs  mutation_root.rs  new_object.rs  object.rs  one_of_input.rs  resolved_object.rs  resolved_object_fields.rs  scalar.rs  simple_object.rs  test_output.rs  union.rs
derive/src/args/common/: args.rs  clippy_error.rs  fields.rs  generics.rs  interfaces.rs  with_parent.rs
derive/src/args/interface/: others.rs  root.rs
derive/src/args/snapshots/: dynamic_graphql_derive__args__test_output__app.snap  dynamic_graphql_derive__args__test_output__enum.snap  dynamic_graphql_derive__args__test_output__expand_object.snap  dynamic_graphql_derive__args__test_output__input_object.snap  dynamic_graphql_derive__args__test_output__interface.snap  dynamic_graphql_derive__args__test_output__mutation.snap  dynamic_graphql_derive__args__test_output__one_of_input.snap  dynamic_graphql_derive__args__test_output__resoled_object.snap  dynamic_graphql_derive__args__test_output__scalar.snap  dynamic_graphql_derive__args__test_output__simple_object.snap  dynamic_graphql_derive__args__test_output__union.snap
derive/src/utils/: attributes.rs  common.rs  crate_name.rs  deprecation.rs  docs_utils.rs  error.rs  interface_attr.rs  interface_hash.rs  mod.rs  path_attr.rs  register_attr.rs  remove_attr.rs  rename_rule.rs  type_utils.rs  with_arg.rs  with_attributes.rs  with_context.rs  with_doc.rs  with_index.rs  with_parent.rs
derive/src/utils/derive_types/: base.rs  base_enum.rs  base_struct.rs  mod.rs  named_enum.rs  named_field.rs  named_struct.rs  named_variant.rs  newtype_enum.rs  newtype_struct.rs  newtype_variant.rs  tuple_enum.rs  tuple_field.rs  (+5 more)
derive/tests/: app.rs  debug.rs  expand_object.rs  gql_enum.rs  input_object.rs  interface.rs  list_tests.rs  mutation.rs  new_type.rs  object.rs  object_tests.rs  one_of_input.rs  readme.rs  registry.rs  resolved_object.rs  scalar.rs  schema_data.rs  schema_utils.rs  simple_object.rs  subscription.rs  union.rs  upload.rs
derive/tests/expand_object/: args_tests.rs  expand_object_tests.rs  generic_tests.rs  reuse_tests.rs
derive/tests/gql_enum/: tests.rs
derive/tests/input_object/: list_tests.rs  tests.rs  type_tests.rs
derive/tests/interface/: as_value_tests.rs  async_test.rs  implementation_tests.rs  interface_tests.rs  list_tests.rs  output_types_tests.rs
derive/tests/mutation/: mutation_tests.rs
derive/tests/new_type/: new_type_tests.rs
derive/tests/object/: object_list_tests.rs  object_tests.rs  object_type_tests.rs
derive/tests/one_of_input/: list_option.rs  tests.rs
derive/tests/resolved_object/: resolved_object_args_tests.rs  resolved_object_lifetime_tests.rs  resolved_object_list_args_tests.rs  resolved_object_list_tests.rs  resolved_object_result_tests.rs  resolved_object_tests.rs  resolved_object_type_tests.rs  resolved_object_with_generics_tests.rs  reuse_tests.rs
derive/tests/scalar/: common.rs  input_type_tests.rs  json.rs  json_tests.rs  output_type_tests.rs  scalar_tests.rs
derive/tests/schema_data/: node_data.rs  node_data_auto.rs  prepare_data.rs
derive/tests/simple_object/: list_tests.rs  object_tests.rs  type_tests.rs  with_generics_tests.rs
derive/tests/union/: union_tests.rs  with_generic_tests.rs  with_interface.rs
derive/tests/upload/: upload_tests.rs
(+75 files in other folders)
