[package]
name = "dynamic-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { path = "../async-graphql", features = ["dynamic-schema"] }

[workspace]
members = [
    "derive",
    "schema-utils",
]