[package]
name = "dynamic-graphql"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Dynamic GraphQL schema"
homepage = "https://github.com/smmoosavi/dynamic-graphql"
repository = "https://github.com/smmoosavi/dynamic-graphql"
keywords = ["graphql", "dynamic", "schema", "async"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1"
async-graphql = { version= "5.0.5", features = ["dynamic-schema"] }
dynamic-graphql-derive = { path = "./derive", version = "0.7.1" }

[dev-dependencies]
graphql-parser = "0.4"

[workspace]
members = [
    "derive",
]
