[package]
name = "dynamic-graphql-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
darling = "0.14"
proc-macro2 = "1"
proc-macro-crate = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
thiserror = "1"

[dev-dependencies]
dynamic-graphql = { path = ".." }

[lib]
proc-macro = true
