[package]
name = "dynamic-graphql-derive"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Dynamic GraphQL schema macro"
homepage = "https://github.com/smmoosavi/dynamic-graphql"
repository = "https://github.com/smmoosavi/dynamic-graphql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
darling = "0.14"
proc-macro2 = "1"
proc-macro-crate = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
thiserror = "1"

[dev-dependencies]
dynamic-graphql = { path = ".." }
graphql-parser = "0.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
tempfile = "3"
async-stream = "0.3"
futures-util = "0.3"

[lib]
proc-macro = true
